Fix alignment of close buttons so they aren't hidden by scrollbar
This fixes #1204

--- a/src/popup/styles/DetailsContainer.scss
+++ b/src/popup/styles/DetailsContainer.scss
@@ -41,6 +41,8 @@
       .buttonsContainer{
         display: none;
         flex-direction: row;
+        padding-right: 16px;
+        
         button {
           width: 15px;
           height: 15px;
